# Brain2Text

./: .gitignore  .gitmodules  01-TimeWarp.py  01.slurm  03-Synthesis.py  03.slurm  04-Train.py  04.slurm  Step4_rnnTraining.ipynb  charSeqRNN.py  charSeqRnnMigrate.py  characterDefinitions.py  dataLabelingStep.py  dataPreprocessing.py  forcedAlignmentHMM.py  kaldiReadWrite.py  makeSyntheticSentences.py  parallelBash.py  pyproject.toml  report.txt  rnnEval.py
twpca/twpca/: crossval.py  model.py  regularizers.py  utils.py
