[project]
name = "brain2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "tensorflow[and-cuda]>=2.20.0",
]
